fix button overlap

--- a/ss3/src/index.css
+++ b/ss3/src/index.css
@@ -49,6 +49,7 @@ button {
     transform 0.3s ease-in-out;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 button:hover {
@@ -56,6 +57,7 @@ button:hover {
   background-color: #646cff;
   color: white;
   transform: scale(1.15) translateY(-5px);
+  z-index: 10;
 }
 
 button:focus,
